2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* objs/objs.cc: Fix triple crossbow bolt quantity frames offset
		being wrong making it seem to disappear. Bug 3053282

2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* /objs/eggs.cc: Fix SS stairs so they autoreset. Bug 3115182
	* /mapedit/studio.cc: Fix typo that messed up -p command line.

2010-12-28 Malignant Manor <malignantmanor@users.sourceforge.net>
	* /mapedit/exult_studio.glade: Fix swapped neutral and friendly
		alignment display in monster eggs and monster info.

2010-12-27 Malignant Manor <malignantmanor@users.sourceforge.net>
	*/objs/jawbone.cc: Revert same tooth restriction since Marzo
		plans to do something different.

2010-12-26 Malignant Manor <malignantmanor@users.sourceforge.net>
	* mapedit/npcedit.cc, mapedit/npclst.cc, mapedit/studio.h:
		Make npcs update properly in the npc browser when apply is
		clicked or a newly created npc is placed in game.

2010-12-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamemgr/bggame.cc, gamemgr/sigame.cc, gumps/Gump_manager.cc,
		gumps/Spellbookgump.cc: Allow spell scrolls, jawbone, and
		teeth in all games.

2010-12-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* objs/jawbone.cc: Don't allow two teeth with the same frame and
	shape to be placed in the same jawbone container.
	* monsters.cc: Use get_num_frames() to get max number of frames
		for random food drops
	* gamewin.cc: Commented out seemingly useless jawbone.h include

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* cheat.cc: Fix bug that prevented -p command line from
		connecting with Exult Studio properly.
	* gumps/Face_stats.cc: Remove Dev game loading restriction
	* cheat_screen.cc, gumps/GameplayOptions_gump.cc, shapeid.cc:
		Allow SI style paper dolls in Dev games.

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* game.cc: Disabled into and ending for new games not based
		on U7 data